Convert to record classes. This will need an update for Blood Arsenal.